# Industrail-Project

./: .gitignore  .pre-commit-config.yaml  README.md  comparison.ipynb  compose_videos.py  demo.ipynb  demo_auto.ipynb  pupil_video_detect.py  pyproject.toml  recognize.py  video_detect_by_erosion.py  video_detection_new_statistics.ipynb  video_detection_stats.ipynb  video_detection_with_false_detection.ipynb
ai-solution/: README.md  create-dataset.py  train.py  validate.py
ai-solution/finetuned/: args.yaml  results.csv
ai-solution/trained_on_our_videos/: args.yaml  (+1 more)
labels/: obj_names.txt
report/: report.aux  report.fdb_latexmk  report.fls  report.tex  report.toc
videos_analysis/: all_results.json  apriltags_p1_nofp_detection_erosion.json  apriltags_p2_nofp_detection_erosion.json  apriltags_p3_nofp_detection_erosion.json  generate_all_tp_tn_fp_fn.sh  id_detection_results_comparison.ipynb  make_graphs.ipynb  put_results_into_single_json_file.py  results_visualization.ipynb  tp_tn_fp_fn.json  tp_tn_fp_fn.py
videos_detection_pupil/: apriltags_new_detection_pupil.json  apriltags_p2_detection_pupil.json  apriltags_p3_detection_pupil.json
videos_detection_pupil_shape2/: apriltags_p0_detection_pupil_shape2.json  apriltags_p2_detection_pupil_shape2.json
videos_detection_pupil_threshold/: apriltags_p1_detection_pupil_threshold.json  apriltags_p2_detection_pupil_threshold.json  apriltags_p3_detection_pupil_threshold.json
videos_detection_pupil_threshold_shape2/: apriltags_new_detection_pupil_threshold_shape2.json  apriltags_p1_detection_pupil_threshold_shape2.json
(+1985 files in other folders)
