[project]
name = "industrial-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apriltag>=0.0.16",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "pupil-apriltags>=1.0.4.post10",
    "ruff>=0.6.9",
    "scikit-image>=0.24.0",
]
